src/test/ui/conditional-compilation/cfg-attr-empty-is-unused.stderr
error: unused attribute
  --> $DIR/cfg-attr-empty-is-unused.rs:7:1
   |
LL | #[cfg_attr(FALSE,)]
   | ^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/cfg-attr-empty-is-unused.rs:5:9
   |
LL | #![deny(unused)]
   |         ^^^^^^
   = note: #[deny(unused_attributes)] implied by #[deny(unused)]

error: unused attribute
  --> $DIR/cfg-attr-empty-is-unused.rs:10:1
   |
LL | #[cfg_attr(TRUE,)]
   | ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

